--- a/mui-tester/package.json
+++ b/mui-tester/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-virtualized-auto-sizer": "^1.0.6",
+    "react-window": "^1.8.6",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
